# playwright-django-tests

./: README.md  pyproject.toml
pizza/: admin.py  models.py  tests.py  validators.py
pizza/migrations/: 0001_initial.py  0002_alter_ingredient_name_alter_pizza_name.py
website/: settings.py
