[tool.poetry]
name = "playwright-tests"
version = "0.1.0"
description = ""
authors = ["Denny Biasiolli <dennybiasiolli@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "playwright_tests"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = 'black'
extend_skip = ['migrations']
filter_files = true
